# mchess-rust-coolify

./: .env  .gitignore  Cargo.toml  README.md  example.env
docker/: docker-compose_dev.yaml
src/: board.rs  book.rs  const.rs  engine.rs  evaluation.rs  lib.rs  main.rs  mcts.rs  moves.rs  piece.rs  protocol.rs  search.rs  server.rs
src/piece/: bishop.rs  dead.rs  king.rs  knight.rs  mod.rs  pawn.rs  queen.rs  rook.rs
src/pieces/: bishop.rs  bitboard.rs  king.rs  knight.rs  mod.rs  pawn.rs  queen.rs  rook.rs
tests/: common.rs  mod.rs  performance.rs
tests/piece/: bishop.rs  king.rs  knight.rs  pawn.rs  queen.rs  rook.rs
tests/special/: blocks.rs  capture.rs  castling.rs  control.rs  evaluation.rs  make_unmake.rs  perft.rs  pin.rs  pos.rs
