[package]
name = "mchess"
version = "1.0.0"
edition = "2021"

[profile.release]
debug = true
opt-level = 3

[dependencies]
axum = { version = "0.8.3", features = ["ws"] }
futures = "0.3.31"
rand = "0.9.0"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.44.1", features = ["full"] }
uuid = { version = "1.16.0", features = ["v4"] }
dotenv = "0.15.0"